@startuml
left to right direction

interface CarRepository {
    + getFromDb(carId: String) : Car
    + getCars() : List<Car>
}

class Car {
    - _id : String
    - _model : String
    - _brand : String
    + Car(id: String, model: String, brand: String)
    + getId() : String
    + getModel() : String
    + getBrand() : String
}

class CarDB {
    - _carsDB : List<Car>
    + getInstance() : CarDB
    + getFromDb(carId: String) : Car
    + getCars() : List<Car>
}

class CarComparer {
    + compareCar(c1: Car, c2: Car) : Car
    + getBestCar() : Car
}

class CarFormatter {
    + carToString(car: Car) : String
    + getAllCarNames() : String
}

CarRepository <|.. CarDB
CarDB --> Car
CarComparer --> Car
CarComparer --> CarRepository
CarFormatter --> Car
CarFormatter --> CarRepository

@enduml
